--- a/index.html
+++ b/index.html
@@ -18,12 +18,55 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
+    <!-- coustom css  -->
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/resposive-style.css" />
 
     <title>Food | Home</title>
   </head>
   <body>
+    <!-- Header Area Start  -->
+    <header>
+      <nav class="navbar navbar-expand-lg navigation-wrap">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="./assets/logo.png" alt="" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Explore Foods</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Reviews</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">FAQ</a>
+              </li>
+              <li><button class="main-btn">1200 345 123</button></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <!-- Header Area End  -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -40,5 +83,7 @@
     ></script> -->
 
     <!-- More: https://getbootstrap.com/docs/5.0/getting-started/introduction/ -->
+    <!-- coustom js  -->
+    <script src="./js/main.js"></script>
   </body>
 </html>
