--- a/index.html
+++ b/index.html
@@ -46,19 +46,21 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#home"
+                  >Home</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="#about">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Explore Foods</a>
+                <a class="nav-link" href="#explore">Explore Foods</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Reviews</a>
+                <a class="nav-link" href="#reviews">Reviews</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">FAQ</a>
+                <a class="nav-link" href="#" faq>FAQ</a>
               </li>
               <li><button class="main-btn">1200 345 123</button></li>
             </ul>
@@ -67,6 +69,35 @@
       </nav>
     </header>
     <!-- Header Area End  -->
+
+    <!-- Section-1 Top Banner Start -->
+    <section id="home">
+      <div class="container-fluid px-0 top-banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-5 col-md-6">
+              <h1>Good food choice are good invesment</h1>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae
+                doloremque molestiae repudiandae saepe nobis hic.
+              </p>
+              <div class="mt-4">
+                <button class="main-btn">
+                  Order Now
+                  <i class="fas fa-shopping-basket ps-3"></i>
+                </button>
+                <button class="white-btn ms-lg-4 mt-lg-0 mt-4">
+                  Order Now
+                  <i class="fas fa-angle-right ps-3"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Section-1 Top Banner End -->
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
