--- a/index.html
+++ b/index.html
@@ -98,6 +98,33 @@
     </section>
     <!-- Section-1 Top Banner End -->
 
+    <!-- Section-2 Counter Start  -->
+    <section id="counter">
+      <section class="counter-section">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-md-3">
+              <h2><span id="count-1"></span>+</h2>
+              <p>SAVING</p>
+            </div>
+            <div class="col-md-3">
+              <h2><span id="count-2"></span>+</h2>
+              <p>PHOTOS</p>
+            </div>
+            <div class="col-md-3">
+              <h2><span id="count-3"></span>+</h2>
+              <p>ROCKETS</p>
+            </div>
+            <div class="col-md-3">
+              <h2><span id="count-4"></span>+</h2>
+              <p>GLOBES</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+    <!-- Section-2 Counter End  -->
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
